# modbot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/modules/: chat.rs  mod.rs  shiftah.rs  thanos.rs
src/modules/moderation/: asciiart.rs  misc.rs  mod.rs  noflood.rs
