[package]
name = "modbot"
version = "0.1.0"
authors = ["Dark <email@removed>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitchchat = { version = "0.14.4", features = ["async", "tokio", "tokio-util"] }
tokio = { version = "0.2.22", features = ["full"] }
regex = "1.3.9"
webhook = "1.0.1"
rand = "0.7"
env_logger = "0.7.1"
log = "0.4.11"
